# himawari

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.sh
commands/: admin.py  confess.py
core/: __init__.py  bot.py  database.py  emojis.py  paginators.py
database/: color.py  leave.py  starboard.py  welcome.py
docs/: admin.md  conf.py  fun.md  general.md  greetings.md  index.rst  info.md  requirements.txt  starboard.md  tos.md
extensions/: admin.py  dev_core.py  fun.py  general.py  greetings.py  help.py  info.py  starboard.py
src/: __init__.py
src/core/: bot.py  paginators.py
src/database/: __init__.py  afk.py  color.py  leave.py  starboard.py  welcome.py
src/extensions/: admin.py  dev_core.py  fun.py  general.py  greetings.py  help.py  info.py  starboard.py  welcome.py
