[tool.poetry]
name = "kakashi"
version = "0.1.0"
description = "An Open source general purpose discord Bot written in hikari library using Python"
authors = ["sarthak-py <shiva02939@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
aiosqlite = "^0.17.0"
python-dotenv = "^0.20.0"
hikari = "^2.0.0-alpha.108"
hikari-lightbulb = "^2.2.1"
hikari-miru = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
